# ml-study

./: README.md  classification.ipynb  pyproject.toml  regression.ipynb
