[tool.poetry]
name = "ml-study"
version = "0.1.0"
description = ""
authors = ["ygkn <2000ygkn0713@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.3"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
ipython = "^7.27.0"
sympy = "^1.8"
nose = "^1.3.7"
sklearn = "^0.0"
pydotplus = "^2.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
